fix styling on navbar to take care of extra white space on the right side

--- a/client/src/Components/navbar/NavBar.css
+++ b/client/src/Components/navbar/NavBar.css
@@ -2,7 +2,7 @@
     position: absolute;
     background: #536383;
     width: 100%;
-    padding: 15px;
+    padding: 15px 0;
     z-index: 2;
 }
 .nav-links {
